# bevy-hybrid-game-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TEMPLATE_SETUP.md  flake.nix  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: game-shell.tsx
apps/web/lib/: headless-backend-client.ts  profile-store.ts  runtime-client.ts  save-slots-store.ts  types.ts  web-bridge.ts
docs/: COMMERCIAL_TEMPLATE_GUIDE.md
mobile/: Cargo.toml  manifest.yaml
mobile/src/: lib.rs
scripts/: build-bevy-runtime.sh  rename-template.mjs  smoke-web.mjs
server/headless_runtime/: Cargo.toml  README.md
server/headless_runtime/src/: main.rs
src/: lib.rs  loading.rs  main.rs  player.rs  runtime_app.rs  starter_scene.rs  web_bridge.rs
src/actions/: mod.rs
