[package]
name = "bevy_hybrid_game_headless_backend"
version = "0.1.0"
publish = false
edition = "2024"
description = "Optional headless Bevy backend reference for the Bevy Hybrid Game Template."
license = "CC0-1.0"
repository = "https://github.com/Zombieliu/bevy-hybrid-game-template"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
bevy = { version = "0.18.1", default-features = false, features = [
    "default_app",
    "multi_threaded",
] }
humantime = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
